--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,19 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "vlucas/phpdotenv": "^5.4",
         "symfony/var-dumper": "^6.1",
         "symfony/finder": "^6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.8"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "lint:fix": "php-cs-fixer fix --allow-risky=yes",
+        "lint:show": "php-cs-fixer fix --allow-risky=yes --dry-run --diff",
+        "phpstan": "phpstan analyze --memory-limit=320M"
     }
 }
