--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "php": "^8.1",
         "vlucas/phpdotenv": "^5.4",
         "symfony/var-dumper": "^6.1",
-        "symfony/finder": "^6.1"
+        "symfony/finder": "^6.1",
+        "psr/container": "^2.0",
+        "symfony/routing": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
