--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "symfony/var-dumper": "^6.1",
         "symfony/finder": "^6.1",
         "psr/container": "^2.0",
-        "symfony/routing": "^6.1"
+        "symfony/routing": "^6.1",
+        "symfony/http-foundation": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
