--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,15 @@
     "require": {
         "php": "^8.1",
         "vlucas/phpdotenv": "^5.4",
-        "symfony/var-dumper": "^6.1",
-        "symfony/finder": "^6.1",
         "psr/container": "^2.0",
-        "symfony/routing": "^6.1",
-        "symfony/http-foundation": "^6.1",
+        "psr/log": "^3.0",
+        "monolog/monolog": "^3.1",
         "symfony/error-handler": "^6.1",
-        "symfony/string": "^6.1"
+        "symfony/http-foundation": "^6.1",
+        "symfony/finder": "^6.1",
+        "symfony/routing": "^6.1",
+        "symfony/string": "^6.1",
+        "symfony/var-dumper": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.20",
