Update readme and sonercloud settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=lit-php_framework
-sonar.organization=lit-php
+sonar.projectKey=strike-php_framework
+sonar.organization=strike-php
 sonar.sources=src/
 sonar.php.coverage.reportPaths=coverage.xml
 sonar.tests=tests/
