--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "symfony/finder": "^6.1",
         "psr/container": "^2.0",
         "symfony/routing": "^6.1",
-        "symfony/http-foundation": "^6.1"
+        "symfony/http-foundation": "^6.1",
+        "symfony/error-handler": "^6.1",
+        "symfony/string": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.20",
