--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/routing": "^6.1",
         "symfony/string": "^6.1",
         "symfony/var-dumper": "^6.1",
-        "symfony/console": "^6.1"
+        "symfony/console": "^6.1",
+        "symfony/process": "^6.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.20",
