--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,18 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5.20",
         "friendsofphp/php-cs-fixer": "^3.8",
-        "phpstan/phpstan": "^1.8"
+        "phpstan/phpstan": "^1.8",
+        "infection/infection": "^0.26.13"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
         "lint:fix": "php-cs-fixer fix --allow-risky=yes",
         "lint:show": "php-cs-fixer fix --allow-risky=yes --dry-run --diff",
         "phpstan": "phpstan analyze --memory-limit=320M"
+    },
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true
+        }
     }
 }
